--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "minimum_chrome_version": "38",
     "version": "2.0.4",
     "author": "Cleanflight Project",
-    "name": "Cleanflight - Configurator",
-    "short_name": "Cleanflight",
+    "name": "Cleanflight(STALKER) - Configurator",
+    "short_name": "Cleanflight(STALKER)",
     "description": "Crossplatform configuration tool for Cleanflight flight control system",
 
     "offline_enabled": true,
